# itmo-analysis-and-design-of-algorithms-hamurabi

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Hammurabi/: City.h  Game.cpp  Game.h  PlayerInput.h  PlayerOutput.h  Resources.h
src/Hamurabi/: AreaToBuy.hpp  AreaToBuy.inl  AreaToPlant.hpp  AreaToPlant.inl  AreaToSell.hpp  AreaToSell.inl  Continue.hpp  Detail.h  Detail.hpp  Detail.inl  Game.fwd  Game.h  Game.hpp  Game.inl  GameEnd.hpp  GameOver.hpp  GameOver.inl  Game_decl.h  GrainToFeed.hpp  GrainToFeed.inl  NotEnoughArea.hpp  NotEnoughArea.inl  NotEnoughGrain.hpp  NotEnoughGrain.inl  NotEnoughPeople.hpp  NotEnoughPeople.inl  Resources.h  Resources.hpp  RoundInput.hpp  RoundInput.inl  Serialization.hpp  Statistics.hpp  Statistics.inl
src/Play/: Detail.hpp  Detail.inl  Hamurabi.hpp  Hamurabi.inl
